[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Scripts/QuiplashGame.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NeonButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ShakingInput.tscn" type="PackedScene" id=3]
[ext_resource path="res://xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Themes/ItemList.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Input" parent="." instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -32.0
margin_right = 144.0
margin_bottom = 32.0

[node name="QuipLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -400.0
margin_top = -170.0
margin_right = 400.0
margin_bottom = -110.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
uppercase = true

[node name="GuesserLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.0
margin_top = -110.0
margin_right = 120.0
margin_bottom = -90.0
align = 1
valign = 1

[node name="ConfirmButton" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = 50.0
margin_right = 100.0
margin_bottom = 100.0
text = "Confirm"

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="QuipList" type="ItemList" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -60.0
margin_right = 240.0
margin_bottom = 200.0
theme = ExtResource( 5 )

[connection signal="pressed" from="ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
[connection signal="item_selected" from="QuipList" to="." method="_on_QuipList_item_selected"]
